--- a/scripts/06_animate_plays.Rmd
+++ b/scripts/06_animate_plays.Rmd
@@ -181,6 +181,7 @@ ggplot() +
         text = element_text(family = "Fira Sans", color = "#26282A"),
         panel.grid = element_blank(),
         legend.position = "top",
+        legend.text = element_text(size = 10.5),
         legend.margin = margin(b = -22),
         axis.text = element_blank(),
         axis.title = element_blank(),
@@ -321,6 +322,7 @@ ggplot() +
         text = element_text(family = "Fira Sans", color = "#26282A"),
         panel.grid = element_blank(),
         legend.position = "top",
+        legend.text = element_text(size = 10.5),
         legend.margin = margin(b = -22),
         axis.text = element_blank(),
         axis.title = element_blank(),
