--- a/scripts/06_animate_plays.Rmd
+++ b/scripts/06_animate_plays.Rmd
@@ -42,6 +42,8 @@ plays <- read_csv("../data/plays.csv")
 
 ---
 
+## Example play animation
+
 .pull-left[
 
 ```{r}
@@ -332,7 +334,125 @@ ggplot() +
 
 ]
 
+---
 
+## Clustering features
+
+```{r}
+center1 <- ex1 |> 
+  filter(nflId == 53492 & event == "man_in_motion") |> 
+  mutate(pt_size = 8, x = x + 0.2)
+event1 <- path1 |> 
+  mutate(x_los = 27, 
+         event = ifelse(frameId == frameId[which(x > x_los)][1], "cross_los", event)) |> 
+  filter(event %in% c("man_in_motion", "ball_snap", "cross_los")) |> 
+  mutate(pt_size = 8) |> 
+  mutate(txt = c("Start of Motion", "Snap", "Crossing LOS"))
+
+
+library(latex2exp)
+ggplot() +
+  annotate("rect",
+           xmin = 29,
+           xmax = 5,
+           ymin = 19,
+           ymax = 31,
+           fill = scales::alpha("#21ae5f", 0.9)) +
+  annotate("text", 
+           y = seq(20, 30, 10),
+           x = 10,
+           color = "white",
+           # family = "Chivo",
+           label = seq(10, 20, 10),
+           size = 6,
+           angle = 90) +
+  annotate("text", 
+           y = c(setdiff(seq(20, 30, 1), seq(20, 30, 5))),
+           x = 23.36667,
+           color = "white",
+           size = 3,
+           label = "—") +
+  geom_hline(yintercept = seq(20, 30, 5), color = "white") +
+  annotate("segment", 
+           y = 27,
+           yend = 27,
+           x = 5,
+           xend = 29,
+           linewidth = 1.5,
+           #000aa0
+           color = "midnightblue") +
+  geom_path(data = filter(path1, frameId < 134), 
+            aes(y, x, color = motion_color, linetype = motion_linetype), linewidth = 1) +
+  geom_point(data = event1, 
+             aes(y, x, fill = pt_fill_order, size = pt_size, group = nflId), shape = 21) +
+  geom_point(data = center1, 
+             aes(y, x, fill = pt_fill_order, size = pt_size, group = nflId), shape = 21) +
+  geom_point(data = mutate(filter(football1, event == "man_in_motion"), pt_size = 3), 
+             aes(y, x, size = pt_size, group = nflId), fill = "#654321", shape = 21) +
+  ggrepel::geom_text_repel(data = event1, aes(y, x, label = txt), 
+                           nudge_x = c(0, 1, 3), nudge_y = c(1, 0.9, 0.5), segment.color = NA,
+                           family = "Fira Sans", fontface = "bold") +
+  annotate("segment", 
+           y = 23.2,
+           yend = 23.2,
+           x = 8,
+           xend = 23.7,
+           linewidth = 0.6,
+           arrow = arrow(type = "closed", ends = "both", length = unit(0.015, "npc")),
+           color = "black") +
+  annotate("segment", 
+           y = 24.5,
+           yend = 24.5,
+           x = 19.35,
+           xend = 23.7,
+           linewidth = 0.4,
+           arrow = arrow(type = "closed", ends = "both", length = unit(0.015, "npc")),
+           color = "black") +
+  annotate("segment", 
+           y = 28,
+           yend = 28,
+           x = 19.2,
+           xend = 23.7,
+           linewidth = 0.4,
+           arrow = arrow(type = "closed", ends = "both", length = unit(0.015, "npc")),
+           color = "black") +
+  annotate("segment", 
+           y = 26.3,
+           yend = 24.5,
+           x = 24.8,
+           xend = 24.8,
+           linewidth = 0.4,
+           arrow = arrow(type = "closed", ends = "both", length = unit(0.015, "npc")),
+           color = "black") +
+  annotate("text", x = 15.5, y = 22.7, color = "white", family = "Fira Sans", size = 4.5,
+           label = TeX("$M_{sideline}$")) +
+  annotate("text", x = 21.3, y = 24, color = "white", family = "Fira Sans", size = 4.5,
+           label = TeX("$S_{sideline}$")) +
+  annotate("text", x = 26.5, y = 25.5, color = "white", family = "Fira Sans", size = 4.5,
+           label = TeX("$S_{endzone}$")) +
+  annotate("text", x = 21.3, y = 28.5, color = "white", family = "Fira Sans", size = 4.5,
+           label = TeX("$L_{sideline}$")) +
+  scale_fill_manual(values = c("white", "gold"),
+                    labels = c("Snapper (C. Humphrey)", "Motion (T. Kelce)")) +
+  scale_size_identity() +
+  scale_color_identity() +
+  scale_linetype_identity() +
+  scale_linewidth_identity() +
+  scale_x_reverse() +
+  guides(fill = guide_legend(override.aes = list(size = 5.4))) +
+  labs(fill = NULL) +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        plot.subtitle = element_text(size = 9.5, face = "italic", hjust = 0.5),
+        text = element_text(family = "Fira Sans", color = "#26282A"),
+        panel.grid = element_blank(),
+        legend.position = "top",
+        legend.text = element_text(size = 10.5),
+        legend.margin = margin(b = -18),
+        axis.text = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank())
+```
 
 
 
