--- a/kaggle/submission.Rmd
+++ b/kaggle/submission.Rmd
@@ -1,7 +1,5 @@
 ---
-# title: STRAVA: <u>S</u>NAP <u>T</u>IMING <u>R</u>HYTHM, <u>A</u>DAPTABILITY & <u>VA</u>RIABILITY
-title: |
-  | Down, set, hut! Explaining variability in snap cadence on plays with motion
+title: Down, set, hut! Explaining variability in snap cadence on plays with motion
 output: 
   html_document: 
     math_method: katex
@@ -42,7 +40,7 @@ In both plays, KC (in white) uses the same type of motion---glide, as the motion
 :::
 ::::
 
-In each animation, the solid gold line along the motion player's path represents the trajectory portion between the start of motion and the ball-snap.
+In each animation, the solid gold line along the motion player's path (dashed gray line) represents the trajectory portion between the start of motion and the ball-snap.
 It is apparent that the plays differ in the time duration of this color-coded portion of the path.
 In the first play, the snap happens 3.6 seconds after Travis Kelce begins his motion, whereas in the second, less than a second elapses since Mecole Hardman starts motioning.
 As both plays result in significant gains (a first down and touchdown), this highlights Mahomes' ability to react, anticipate, and time the snaps in various situations, elevating the effectiveness of the entire KC offensive unit.
@@ -54,7 +52,7 @@ In this work, **we propose a multilevel modeling framework to assess a passer's 
 
 We define the snap timing $\delta$ for a play as the number of frames elapsed between the start of motion $(t_{\text{motion}})$ and the ball-snap $(t_{\text{snap}})$.
 That is,$$\delta = t_{\text{snap}} - t_{\text{motion}}\,.$$ 
-Note that in our analysis, we only consider **plays with receivers in motion at snap and that are running a route**.
+Note that in our analysis, we only consider **plays with receivers in motion at snap and also running a route**.
 
 Here, it is straightforward to obtain $t_{\text{snap}}$ for each play using the frame label in the tracking data.
 Conversely, identifying $t_{\text{motion}}$ requires more effort, due to [inconsistency between player-level motion indicators and annotated tracking events](https://www.kaggle.com/competitions/nfl-big-data-bowl-2025/discussion/543709).
@@ -78,38 +76,27 @@ We use the following procedure to determine $t_{\text{motion}}$ for each play.
 
 The observed timing between motion and snap on a single play is surely attributable to numerous variables---from contextual and spatiotemporal features, to the players and teams involved.
 To this end, we fit the following multilevel model:
-
-<!-- \begin{align*} -->
-<!--   \delta_i  &\sim \textsf{Gamma}(\lambda_i, \phi_i) \\ -->
-<!--   \log \lambda_i &=\alpha_{q[i],m[i],d[i]} + \boldsymbol{\beta X_i} \\ -->
-<!--   \log \phi_i &=\alpha_{q[i]} \\ -->
-<!--   \alpha_q  &\sim \textsf{Normal}(\mu_{\alpha_q}, \sigma^2_{\alpha_q}) && \small{\textrm{for quarterback}} &q &= 1, \dots, Q \\ -->
-<!--   \alpha_m  &\sim \textsf{Normal}(\mu_{\alpha_m}, \sigma^2_{\alpha_m}) && \small{\textrm{for motion player}} &m &= 1, \dots, M \\ -->
-<!--   \alpha_d  &\sim \textsf{Normal}(\mu_{\alpha_d}, \sigma^2_{\alpha_d}) && \small{\textrm{for defensive team}} &d &= 1, \dots, D \\ -->
-<!-- \end{align*} -->
-
 $$
 \begin{aligned}
-\delta_i  &\sim \textsf{Gamma}(\mu_i, \phi_i) \\
+\delta_i  &\sim \textsf{Gamma}(\mu_i, \alpha_i) \\
 \\
-\log \mu_i &= \alpha_0 + \boldsymbol{\beta X_i} + b_{q[i]} + b_{m_[i]} + b_{d[i]} \\
+\log \mu_i &= \gamma_0 + \boldsymbol{\beta X_i} + b_{q[i]} + b_{m_[i]} + b_{d[i]} \\
 b_q  &\sim \textsf{Normal}(0, \sigma^2_q)\\
 b_m  &\sim \textsf{Normal}(0, \sigma^2_m)\\
 b_d  &\sim \textsf{Normal}(0, \sigma^2_d)\\
 \\
-\log \phi_i &= \gamma_0 + u_{q[i]} \\
+\log \alpha_i &= \psi_0 + u_{q[i]} \\
 u_q  &\sim \textsf{Normal}(0, \tau^2_q)\\
 \end{aligned}
 $$
+In detail, we model the response $\delta_i > 0$ (snap timing for play $i$) using a Gamma distribution (with log link function,
+[parameterized by two parameters: mean $\mu$ and shape $\alpha$](https://paulbuerkner.com/brms/articles/brms_families.html#:~:text=The%20density%20of%20the%20Gamma,shape%20parameter)),
+which is well-suited for a positive, continuous variable like our case.
 
-
-In detail, we model the response $\delta_i > 0$ (snap timing for play $i$) using a Gamma distribution (with log link function), which is well-suited for a positive, continuous variable like our case.
-
-Of primary interest, we model the $\phi$ parameter, which represents the shape/variance of the distribution, with QB random effects.
+Of primary interest, we model the shape/variance $\alpha$ of the distribution with QB random effects.
 This allows us to examine the variability in timing between motion and snap among NFL quarterbacks.
-From an offensive standpoint, we hypothesize that a higher timing variability is beneficial because it prevents defenses from predicting when the ball will be snapped.
+From an offensive standpoint, we hypothesize that a higher timing variability is beneficial because it prevents defenses from predicting when the snap will occur.
 This also allows the offense to control the game flow and exploit defensive vulnerabilities.
-<!-- insert shred it gruden gif https://x.com/BarstoolGruden/status/1858193718823522678 -->
 
 We also model the mean parameter $\mu$ by including random intercepts for three groups: quarterback $q$, motion player $m$, and defensive team $d$.
 Moreover, we account for contextual and personnel information about play $i$ through $\boldsymbol{X_i}$, and estimate the coefficients $\boldsymbol\beta$ as fixed effects.
@@ -120,7 +107,7 @@ This information, however, is not provided in the data, prompting us to consider
 
 ## Motion type clustering
 
-Our clustering input contains tracking data features describing the motion player's location at different events relative to the ball-snapper's location before the snap.
+Our clustering input contains tracking data features describing the motion player's location at different events relative to where the ball-snapper lines up before the snap.
 The following figure illustrates the derived features for the example play from earlier with Travis Kelce in motion.
 We compute the displacement at ball-snap between the motion player and snapper in both sideline $(\textsf{S}_{\textsf{sideline}})$ and endzone $(\textsf{S}_{\textsf{endzone}})$ directions.
 We also include the displacement with respect to the sideline between the snapper and motion player at the start of motion $(\textsf{M}_{\textsf{sideline}})$ as well as when they cross the line of scrimmage (LOS) $(\textsf{L}_{\textsf{sideline}})$.
@@ -142,17 +129,19 @@ We choose the optimal number of Gaussian clusters using BIC, and validate the cl
 # Analysis
 
 Our multilevel model is fitted in a Bayesian framework via the `brms` `R` package using 4 parallel chains of 10,000 iterations and 5,000 burn-in draws.
-We perform diagnostics by visually inspecting trace plots as well as computing the $\widehat R$ and effective sample size statistics, and find no issues with model convergence and efficiency.
+We perform diagnostics by inspecting trace plots as well as computing the $\widehat R$ and effective sample size statistics, and find no issues with model convergence and efficiency.
 Ultimately, we obtain posterior distributions for our model parameters and perform the following analysis.
 
 ## Leaderboard
 
-The following figure displays the posterior distributions for the shape/variance random effect (ordered by posterior mean) for QBs with at least 50 pass attempts across the considered plays.
+The following figure displays the posterior distributions for the shape/variance random effect (ordered by posterior mean) for QBs with at least 50 pass attempts across the considered motion plays.
 For each player, the posterior mean of the aforementioned distribution provides an estimate for their ability to maintain variability in snap timing, **with higher posterior mean values corresponding to greater variability in timing between motion and snap**.
 
 Patrick Mahomes stands out as the top QB according our measure, adding the ability to time snaps as another element to his success.
 Other high-caliber QBs such as Tom Brady and Josh Allen are also among the top players in our rankings.
-Note that there is considerable uncertainty in our estimates, as demonstrated by the rather wide credible intervals, which is unsurprising given our limited sample of motion plays. However, we still observe substantial differences in the credible intervals across this selection of QBs. For instance, despite his pay, Daniel Jones 95% credible interval does not overlap at all with the 95% credible intervals of the top five QBs.
+Note that there is considerable uncertainty in our estimates, as demonstrated by the rather wide credible intervals, which is unsurprising given our limited sample of motion plays.
+Still, we observe substantial differences in the credible intervals across this subset of QBs.
+For instance, despite his pay, Daniel Jones' 95% CI does not overlap at all with the 95% CIs of the top five QBs.
 
 ```{r}
 #| fig-height: 8
@@ -164,7 +153,7 @@ readRDS("../figures/posteriors_slab.rds")
 
 Next, we examine the relationship between the posterior mean for the QB shape/variance random effect and a measure of "havoc rate".
 Here, a havoc event is defined as whether any of the following defensive outcomes are generated on a play: pass breakup, forced fumble, tackle for loss, interception, sack, and pressure.
-The figure below is a scatterplot of the havoc rate and aforementioned posterior mean for the same subset of QBs from earlier across all passing plays from the first nine weeks of the 2022 NFL season (left) and only the considered motion plays (right).
+The figure below is a scatterplot of the aforementioned posterior mean and havoc rate for all pass plays over the first nine weeks of the 2022 NFL season (left) and only the considered motion plays (right) for the same subset of QBs as before.
 
 **We observe that lower snap timing variability corresponds to higher rate of facing havoc events created by the opposing defense.**
 This makes intuitive sense, as when there is little variability in timing, the offense is likely to be predictable and experience unfavorable play outcomes.
@@ -188,10 +177,18 @@ This is certainly a simple viewpoint, as one could come up with a more rigid def
 Further, despite the reasonable set of inputs in our cluster analysis, there is possibly room for improvement in identifying the motion types by having more refined features, or alternatively using a functional clustering approach.
 Since neither of these tasks is the main focus of our work, we leave these explorations for the future.
 
+[[TODO: mention QB awareness/pocket presence. (should go in first paragraph?)]]
+
+[[TODO: mention selections of QB---no Jalen Hurts/Joe Burrow]]
 
 # Appendix {-}
 
 All code is available at https://github.com/qntkhvn/timing.
+
+RY thanks Sam Schwartzstein for a conversation which motivated the idea of measuring variability in QB snap timing.
+QN thanks Nick Wan whose [Twitch stream](https://www.twitch.tv/nickwan_datasci) and [Kaggle notebook](https://www.kaggle.com/code/nickwan/fly-sweeps-are-the-best-rushing-play) inspired the definition and identification of motion in this work.
+
+On a personal note, QN failed to convince RY to name the metric *STRAIN (Patrick's version)*, where STRAIN stands for Snap Timing Rhythm and Adaptability INdex.
 
 ---
 
@@ -200,7 +197,3 @@ All code is available at https://github.com/qntkhvn/timing.
 Department of Statistics & Data Science
 
 Carnegie Mellon University
-
----
-
-On a personal note, QN failed to convince RY to name the metric _STRAIN (Patrick's version)_, where STRAIN stands for Snap Timing Rhythm and Adaptability INdex.
