--- a/kaggle/submission.Rmd
+++ b/kaggle/submission.Rmd
@@ -159,13 +159,15 @@ The figure below is a scatterplot of the aforementioned posterior mean and havoc
 This makes intuitive sense, as when there is little variability in timing, the offense is likely to be predictable and experience unfavorable play outcomes.
 In contrast, by varying the duration between motion and snap, offenses can create uncertainty, forcing defenders to play more cautiously which reduces their effectiveness in executing disruptive plays.
 
-[[TODO: comment on the correlation between motion rate vs havoc rate & shape rand eff posterior mean vs motion rate]]
-
 ```{r}
 #| fig-height: 4.1
 #| fig-width: 10
 readRDS("../figures/corr_havoc.rds")
 ```
+
+As a side note, the posterior mean for the shape random effect scarcely correlates with the rate of motion on all pass plays.
+Additionally, there is a weak correlation between motion rate and havoc rate.
+This suggests that our measure of QB snap timing variability provides independent information of motion tendency, while also being a more direct indicator of encountering defensive disruptions than the prevalence of motion.
 
 # Discussion
 
